resources/public/css/main.css
/* https://www.w3schools.com/css/css3_animations.asp */
@keyframes fade-in {
	from {
		opacity: 0;
	}
	to {
		opacity: 1;
	}
}

html {
	margin: 0;
	padding: 0;
}

body {
	/* global text styles */
	font-family: "Gill Sans", sans-serif;
	font-weight: lighter;
	letter-spacing: 0.4ch;
	margin: 0;
	padding: 0;

	/*  grey glow behind input textfield
		(gradients don't support transitions, unfortunately) */
	background: white; /* for browsers w/o gradient support */
	background: radial-gradient(circle, #FCFCFB, white);
	background-repeat: no-repeat;
	background-attachment: fixed;

	/* otherwise safari fonts become too thin */
	-webkit-font-smoothing: subpixel-antialiased;
}

#bg {
    min-height: 100vh; /* necessary to fill screen */
    transition: all 1s;
}

#bg.with-page {
	background: white;
	transition: all 1s;
}

header {
	/* center the logo */
	text-align: center;
}

img#logo {
	animation: fade-in 0.5s ease;

	/* TODO: find fixes for non-Chrome browsers */
	user-drag: none;
    user-select: none;

	/* size */
	width: 100%; /* otherwise image could overflow on small page widths */
}

.big-logo {
	max-height: 7em;
	transition: all 0.3s;
	margin-bottom: 0.5em;
}

.small-logo {
	max-height: 4em;
	margin: 0.8em auto 0 auto;
	transition: all 0.3s;
}

/* Centering vertically is still fucking hard!
https://stackoverflow.com/questions/356809/best-way-to-center-a-div-on-a-page-vertically-and-horizontally */
.main {
	z-index: 1;
	position: fixed;
	min-width: 100%; /* expand entirely, but always keep a little margin*/
	max-width: 80%; /* fixes problem with layout when hint length > page width */
	top: 42%; /* using 50% looks off somehow...*/
	left: 50%;
	transition: all 0.3s; /* must be "all", not individual attributes */
	transform: translate(-50%, -40%);
	-webkit-transform: translate(-50%, -40%);
    -moz-transform: translate(-50%, -40%);
    -o-transform: translate(-50%, -40%);
    -ms-transform: translate(-50%, -40%);
	border-bottom: solid 2pt rgba(233, 233, 233, 0);
}

.main.top {
	background: #FCFCFB;
	border-bottom: solid 1pt rgba(220, 220, 220, 1);
	top: 0;
	position: fixed;
	transition: all 0.5s; /* must be "all", not individual attributes */
    transform: translate(-50%, 0);
	-webkit-transform: translate(-50%, 0);
    -moz-transform: translate(-50%, 0);
    -o-transform: translate(-50%, 0);
    -ms-transform: translate(-50%, 0);
}

/* 	aligner is necessary for limiting width and centering horisontally!
	without "min-width:98%;" in .vcenter, .vcentor gets crammed,
	so this extra class is necessary to get a max-width.
*/
div#aligner {
	max-width: 80ch;
	margin: auto;
	padding: 0 1ch;
}

form#action-chooser {
    /* box */
    padding: 2ch;
    width: 40ch;
    border: 1pt solid black;
	background: radial-gradient(#BB5544, #AB4230);
    border: solid 1pt #AA4433;
    border-radius: 1ch;
    box-shadow: 0 4pt 8pt 0 rgba(0, 0, 0, 0.2), 0 6pt 20pt 0 rgba(0, 0, 0, 0.19);

    /* center horisontally */
    margin: auto;

    /* center vertically
      adapted from .main */
    z-index: 2;
    position: fixed;
    top: 50%; /* using 50% looks off somehow...*/
    left: 50%;
    transform: translate(-50%, -70%);
    -webkit-transform: translate(-50%, -70%);
    -moz-transform: translate(-50%, -70%);
    -o-transform: translate(-50%, -70%);
    -ms-transform: translate(-50%, -70%);

    /* expand to fit content
       https://teamtreehouse.com/community/how-can-i-make-my-divs-grow-wider-according-to-their-content */
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;

    animation: fade-in 0.3s linear;
}

.hidden {
    display: none;
}

form#action-chooser p#action-header {
    /* text-related */
    font-family: "Gill Sans", sans-serif;
    font-size: 14pt;
    color: #FFBBBB;
    text-align: center;

    margin: 0 0 0.5em 0;
    padding-bottom: 0.5em;
    border-bottom: 1pt solid #CC6666;
}

form#action-chooser ol {
    margin: 0;
    padding: 0 0 0 3ch;
    color: #FFBBBB;
}

/* TODO: don't use radio buttons? */
form#action-chooser input {
    /* remove radio button */
    -webkit-appearance: none;
    -moz-appearance: none;
    -ms-appearance: none;
    -o-appearance: none;
    appearance: none;

    /* remove last little bit on the left */
    margin: 0;
}

form#action-chooser label {
    color: #FFBBBB;
    cursor: pointer;
    font-family: "Gill Sans", sans-serif;
    font-size: 14pt;
}

form#action-chooser label:hover {
    text-decoration: underline;
}

form#action-chooser .marked, form#action-chooser .marked * {
    color: white;
}

/* for styling checked radio buttons
form#action-chooser input:checked + label {
    color: white;
}*/

form#study-form {
	display: flex;
	margin: 1em 0 0 0;
}

input#study-input {
	animation: fade-in 1s ease;

	/* positioning */
	flex: 1;

	/* text-related */
	font-size: 14pt;

	/* box */
	padding: 0.5ch;
	border: 1pt solid #999999;
	border-radius: 0.5ch;
}

button#study-button {
	/* hiding using trick: https://stackoverflow.com/questions/477691/submitting-a-form-by-pressing-enter-without-a-submit-button*/
	border: 0;
	padding: 0;
	font-size: 0;
	width: 0;
}

input.default {
	background-color: white;
	transition: all 0.5s;
}

/* red colouring of input when evaluation returns 0 actions */
input.no-actions {
	background-color: #ffdcc6;
	transition: all 0.5s;
}

/* grey colouring of input when action-chooser is active */
input.disabled {
	background-color: #DDDDDD;
	transition: all 0.5s;
}

div#study-hint {
	max-width: 100%;
	animation: fade-in 0.5s ease;

	/* text-related */
    font-size: 9pt;
    font-weight: lighter;
    color: #999999;
    margin: 0.4em 0;
    padding: 0.5ch;
    letter-spacing: 0.6ch;

	/* make sure text stays on a single line */
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;

	/* make sure the hint keeps its height when empty */
	height: 1.2em; /* 1em is having problems displaying span.keypress */
}

span.keypress {
	padding: 0 0.8ch;
	border: 1pt solid #AAAAAA;
    border-radius: 0.5ch;
    background-color: white;
    color: #666666;
}

p, h1, h2 {
	color: #555555;
	margin: 0;
	letter-spacing: 0.2ch;
}

.dictionary-header {
    display: flex;
    flex-direction: row;
}

h1, h2 {
	font-family: Didot, serif;
	font-weight: 600;
	font-size: 24pt;
}

.dictionary-header-bubble {
    flex-grow: 1;
    display: flex;
    align-items: center;
}

.etymology {
    border-radius: 1ch;
    padding: 1em;
    margin: auto;
    font-size: 10pt;
    font-style: italic;
    font-family: "Gill Sans", sans-serif;
    font-weight: 100;
    text-align: center;
    color: #BBBBBB;
    letter-spacing: 0.5ch;
}

.etymology .hanzi {
    color: #777777;
}

h2 {
    font-weight: 400;
    font-size: 20pt;
}

/* headers above lists (e.g. search results) should be centered */
.list-header, .list-subheader {
	text-align: center;
}

.list-subheader {
	color: #AAAAAA;
	font-size: 10pt;
	font-style: italic;
}

p {
	font-size: 14pt;
	font-weight: 100;
	margin: 0 0 1em 0;
	color: #777777;
}

.pedestal {
	/* positioning */
    position: relative;
    top: 11em; /* pos relative to header varies a bit on different browsers */
    margin: auto;
    padding: 0 1ch;

	/* 	to make sure the page can reached on small screen sizes,
		otherwise the footer might block the view */
	border-bottom: 5.5em solid rgba(255,255,255,0);
}

article {
	animation: fade-in 0.5s ease;

	/* box */
	max-width: 80ch;

	/* positioning */
    margin: auto;

	/* text-related */
    color: #999999;
    letter-spacing: 0.2ch;
}

hr {
    height: 1pt;
    background: rgba(220, 220, 220, 1);
    font-size: 0;
    border: 0;
}

.search-result h1 {
	margin: 0 0 0.5em 0;
}

.search-result form {
    margin-bottom: 1em;
    font-size: 12pt;
    letter-spacing: 0.3ch;
    padding: 0.5em 1ch;
    margin-right: 0.5ch;
    border: 1pt solid #FFAAAA;
    border-radius: 0.5ch;
    background-color: #FFCCCC;
    color: #994444;
}

.dictionary-entry, .dictionary-entries {
	font-size: 14pt;
}

.dictionary-entries {
	list-style-type: none;
	padding: 0;
	margin: 0;
}

.dictionary-entries li {
    margin-bottom: 0.8em;

    /* make sure text stays on a single line */
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis; /* not working? */
}

.dictionary-entries .hanzi {
    display: inline-block;
	font-size: 20pt;
	padding: 0.2em;
	border: 1pt solid #AAAAAA;
	border-radius: 0.5ch;
	background-color: white;
	color: #666666;
}

.dictionary-entries ul {
    font-size: 16pt;
    vertical-align: top;
    display: inline-block;
    list-style-type: none;
	padding: 0;
	margin: 0.3em 0 0 0;
}

.dictionary-entries ul li {
    padding: 0;
    margin: 0 0 0.5em 0;
}

/* mark variants that only appear in a different script (e.g. traditional) */
.false-variant, .false-variant .hanzi, .false-variant .pinyin {
	color: #DDDDDD;
	border-color: #DDDDDD;
	text-decoration: line-through;
}

/* marks a special tag in a dictionary entry (in the subheader after pinyin) */
.tag {
	font-size: 14pt;
	font-family: Didot, serif;
	letter-spacing: 0.3ch;
    padding: 0.2em 1ch;
    margin-right: 0.5ch;
    border: 1pt solid #AAAAAA;
    border-radius: 0.5ch;
    background-color: white;
    color: #666666;
}

.frequency-high {
    color: #7bce34;
}

.frequency-medium {
    color: #ffcc2f;
}

.frequency-low {
    color: #ead7cf;
}

.dictionary-entry h1 {
	font-size: 52pt;
}

.dictionary-entry h1 .hanzi {
	font-weight: 100;
}

.dictionary-entry .subheader {
	font-size: 18pt;
	line-height: 1.5;
}

.hanzi {
	color: #555555;
	/* http://www.kendraschaefer.com/2012/06/chinese-standard-web-fonts-the-ultimate-guide-to-css-font-family-declarations-for-web-design-in-simplified-chinese/ */
	font-family: Georgia, "Times New Roman", "KaiTi", "楷体", STKaiti, "华文楷体", serif;
}

.pinyin {
	color: #DD8888;
	font-family: Didot, serif;
}

.pinyin::before {
	content: "[";
}

.pinyin::after {
	content: "]";
}

footer {
	animation: fade-in 1.5s ease;

	/* text */
	text-align: center;
	color: #DD8888;

	/* box */
	border-top: solid 1pt #AA4433;
	background: linear-gradient(#BB5544, #AB4230);
	border-left: 1pt solid #BB5544; /* fixes problem with transparent left border */
	padding: 1.2em 0 0.5em 0;
	width: 100%;

	/* position */
	position: fixed;
	margin: 0;
    bottom: 0;
}

nav {
	/* text-related */
	font-family: "Gill Sans", sans-serif;
    font-size: 12pt;
    margin-bottom: 0.8em;
}

footer .script-changer {
    padding: 0.2em 0.5em;
    border: 1pt solid #CC6666;
    border-radius: 0.5ch;
    color: #FFBBBB;

    /* nav links shouldn't jump around when changing script */
    display: inline-block;
    min-width: 7ch;

    /* fix for #14 (translation pop-up on Chrome mobile) */
    user-drag: none;
    user-select: none;
}

p#copyright {
	color: #DD8888;
	font-size: 8pt;
}


/* LINKS IN GENERAL */
a {
	color: inherit;
	text-decoration: none;
}

.hanzi a, .pinyin a, .dictionary-entries a {
	color: inherit;
}

a:hover {
	text-decoration: none;
	color: #4477DD;
}

.hanzi a:hover, .pinyin a:hover, .dictionary-entries a:hover, a:hover .hanzi, a:hover .pinyin {
	color: #4477DD;
	border-color: #4477DD;
}


/* FOOTER / NAV LINKS */

footer a {
	color: white;
}

footer a:hover {
	color: white;
	text-decoration: underline;
}

footer a.current-page, footer a.current-page:hover {
	color: #661111;
	text-decoration: none;
}

footer .script-changer:hover {
	text-decoration: none;
	border-color: white;
}

.fake-link {
	cursor: pointer;
}

